fix: Button iOS error

--- a/css/home.css
+++ b/css/home.css
@@ -77,7 +77,6 @@
 .reservation-box form {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 100%;
 }
 
